src/cses/distinct_numbers/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/distinct_numbers/distinct_numbers.cpp.
/Users/michael/repos/competitive-programming/src/cses/distinct_numbers/distinct_numbers.cpp:3:10: error: 'algorithm' file not found [clang-diagnostic-error]
    3 | #include <algorithm>
      |          ^~~~~~~~~~~
Found compiler error(s).
